crates/rudolint-rules/tests/snapshots/rule_fixtures__compat_rule_findings.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 3,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 5,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "RDL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 6,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "error"
  },
  {
    "code": "RDL3025",
    "help": null,
    "labels": [],
    "message": "use exec/JSON form for CMD and ENTRYPOINT",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "RDL4003",
    "help": null,
    "labels": [],
    "message": "only the final CMD is used",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
