crates/rudolint-rules/tests/snapshots/rule_fixtures__default_rule_findings.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 15
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 57,
      "end_column": 27,
      "end_line": 2,
      "start_byte": 31,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "DL3000",
    "help": null,
    "labels": [],
    "message": "WORKDIR should be absolute",
    "path": "",
    "primary_span": {
      "end_byte": 69,
      "end_column": 12,
      "end_line": 3,
      "start_byte": 58,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "RDK1001",
    "help": null,
    "labels": [],
    "message": "secret-like values should use BuildKit secret mounts instead of ARG or ENV",
    "path": "",
    "primary_span": {
      "end_byte": 83,
      "end_column": 14,
      "end_line": 4,
      "start_byte": 70,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "DL3018",
    "help": null,
    "labels": [],
    "message": "pin versions in apk add",
    "path": "",
    "primary_span": {
      "end_byte": 100,
      "end_column": 17,
      "end_line": 5,
      "start_byte": 84,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3019",
    "help": null,
    "labels": [],
    "message": "use `apk add --no-cache` to avoid persisting the apk package cache",
    "path": "",
    "primary_span": {
      "end_byte": 100,
      "end_column": 17,
      "end_line": 5,
      "start_byte": 84,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "info"
  },
  {
    "code": "RDK1003",
    "help": null,
    "labels": [],
    "message": "package install step can use a BuildKit cache mount for repeat builds",
    "path": "",
    "primary_span": {
      "end_byte": 100,
      "end_column": 17,
      "end_line": 5,
      "start_byte": 84,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "info"
  },
  {
    "code": "DL3020",
    "help": null,
    "labels": [],
    "message": "use COPY for local files unless archive extraction or remote fetch is intended",
    "path": "",
    "primary_span": {
      "end_byte": 115,
      "end_column": 15,
      "end_line": 6,
      "start_byte": 101,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "error"
  },
  {
    "code": "DL3025",
    "help": null,
    "labels": [],
    "message": "use exec/JSON form for CMD and ENTRYPOINT",
    "path": "",
    "primary_span": {
      "end_byte": 130,
      "end_column": 15,
      "end_line": 7,
      "start_byte": 116,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "DL4003",
    "help": null,
    "labels": [],
    "message": "only the final CMD is used",
    "path": "",
    "primary_span": {
      "end_byte": 152,
      "end_column": 22,
      "end_line": 8,
      "start_byte": 131,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
