crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3002_final_user_not_root_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 134
expression: "serde_json::to_value(&cases).expect(\"cases should serialize\")"
---
[
  {
    "findings": [],
    "fixture": "DL3002.no-user"
  },
  {
    "findings": [],
    "fixture": "DL3002.switches-away-from-root"
  },
  {
    "findings": [],
    "fixture": "DL3002.numeric-non-root"
  },
  {
    "findings": [
      {
        "code": "DL3002",
        "help": null,
        "labels": [],
        "message": "the final image user should not be root",
        "path": "",
        "primary_span": {
          "end_byte": 26,
          "end_column": 10,
          "end_line": 2,
          "start_byte": 17,
          "start_column": 1,
          "start_line": 2
        },
        "severity": "warning"
      }
    ],
    "fixture": "DL3002.final-root-name"
  },
  {
    "findings": [
      {
        "code": "DL3002",
        "help": null,
        "labels": [],
        "message": "the final image user should not be root",
        "path": "",
        "primary_span": {
          "end_byte": 23,
          "end_column": 7,
          "end_line": 2,
          "start_byte": 17,
          "start_column": 1,
          "start_line": 2
        },
        "severity": "warning"
      }
    ],
    "fixture": "DL3002.final-root-id"
  },
  {
    "findings": [
      {
        "code": "DL3002",
        "help": null,
        "labels": [],
        "message": "the final image user should not be root",
        "path": "",
        "primary_span": {
          "end_byte": 25,
          "end_column": 9,
          "end_line": 2,
          "start_byte": 17,
          "start_column": 1,
          "start_line": 2
        },
        "severity": "warning"
      }
    ],
    "fixture": "DL3002.final-root-group"
  }
]
