crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3004_no_sudo_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 166
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3004",
    "help": null,
    "labels": [],
    "message": "avoid sudo in Docker builds; use USER or a privilege-drop tool instead",
    "path": "",
    "primary_span": {
      "end_byte": 38,
      "end_column": 22,
      "end_line": 2,
      "start_byte": 17,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "error"
  },
  {
    "code": "DL3004",
    "help": null,
    "labels": [],
    "message": "avoid sudo in Docker builds; use USER or a privilege-drop tool instead",
    "path": "",
    "primary_span": {
      "end_byte": 71,
      "end_column": 33,
      "end_line": 3,
      "start_byte": 39,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "error"
  },
  {
    "code": "DL3004",
    "help": null,
    "labels": [],
    "message": "avoid sudo in Docker builds; use USER or a privilege-drop tool instead",
    "path": "",
    "primary_span": {
      "end_byte": 102,
      "end_column": 31,
      "end_line": 4,
      "start_byte": 72,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "error"
  }
]
