crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3006_arg_expanded_stage_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 170,
      "end_column": 24,
      "end_line": 7,
      "start_byte": 147,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  }
]
