crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3006_braced_modifiers_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 99,
      "end_column": 39,
      "end_line": 6,
      "start_byte": 61,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 136,
      "end_column": 37,
      "end_line": 7,
      "start_byte": 100,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 225,
      "end_column": 40,
      "end_line": 9,
      "start_byte": 186,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 260,
      "end_column": 35,
      "end_line": 10,
      "start_byte": 226,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 289,
      "end_column": 29,
      "end_line": 11,
      "start_byte": 261,
      "start_column": 1,
      "start_line": 11
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 337,
      "end_column": 48,
      "end_line": 12,
      "start_byte": 290,
      "start_column": 1,
      "start_line": 12
    },
    "severity": "warning"
  }
]
