crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3006_explicit_from_tag_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 182
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 11,
      "end_column": 12,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 32,
      "end_column": 20,
      "end_line": 3,
      "start_byte": 13,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 59,
      "end_column": 26,
      "end_line": 5,
      "start_byte": 34,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 87,
      "end_column": 27,
      "end_line": 7,
      "start_byte": 61,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "warning"
  },
  {
    "code": "DL3006",
    "help": null,
    "labels": [],
    "message": "base image should use an explicit tag or digest",
    "path": "",
    "primary_span": {
      "end_byte": 126,
      "end_column": 38,
      "end_line": 9,
      "start_byte": 89,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  }
]
