crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3007_no_latest_tag_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 198
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 18,
      "end_column": 19,
      "end_line": 1,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 1
    },
    "severity": "warning"
  },
  {
    "code": "DL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 56,
      "end_column": 37,
      "end_line": 3,
      "start_byte": 20,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3007",
    "help": null,
    "labels": [],
    "message": "avoid mutable latest base image tags",
    "path": "",
    "primary_span": {
      "end_byte": 91,
      "end_column": 34,
      "end_line": 5,
      "start_byte": 58,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  }
]
