crates/rudolint-rules/tests/snapshots/rule_fixtures__dl3008_pin_apt_get_install_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 214
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "DL3008",
    "help": null,
    "labels": [],
    "message": "pin versions in apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 64,
      "end_column": 28,
      "end_line": 3,
      "start_byte": 37,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  },
  {
    "code": "DL3008",
    "help": null,
    "labels": [],
    "message": "pin versions in apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 193,
      "end_column": 83,
      "end_line": 5,
      "start_byte": 111,
      "start_column": 1,
      "start_line": 5
    },
    "severity": "warning"
  },
  {
    "code": "DL3008",
    "help": null,
    "labels": [],
    "message": "pin versions in apt-get install",
    "path": "",
    "primary_span": {
      "end_byte": 464,
      "end_column": 63,
      "end_line": 10,
      "start_byte": 402,
      "start_column": 1,
      "start_line": 10
    },
    "severity": "warning"
  }
]
